테이블 출력완료

--- a/g2b/WebContent/copy.html
+++ b/g2b/WebContent/copy.html
@@ -33,7 +33,7 @@
 </head>
 <body>
 
-	<section position="fixed" class="ftco-no-pt bg-light">
+	<section position="fixed" class=" bg-light">
 		<div class="row no-gutters">
 			<div class="col-md-4 d-flex align-items-center">
 				<form action="#" class="request-form ftco-animate bg-primary">
